<resources>
  <string name="app_name">HackerNews</string>
  <string name="title_activity_home">HomeActivity</string>
  <string name="topStories">Top Stories</string>
  <string name="showStories">Show Stories</string>
  <string name="jobStories">Job Stories</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="askStories">Ask Stories</string>
  <string name="readMore">read more...</string>
  <string name="title_activity_comments">CommentsActivity</string>
  <string name="comments">Comments</string>
  <string name="points">points</string>
  <string name="defaultCommentCount">0</string>
  <string name="title_activity_user">UserActivity</string>
  <string name="submitted">Submitted</string>
  <string name="items">items</string>
  <string name="description">Description:</string>
  <string name="noDescriptionAvailable">No description available</string>
  <string name="karma">Karma:</string>
  <string name="memberSince">Member Since:</string>
  <string name="submittedLbl">Submitted:</string>
</resources>
